core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_context_selector.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---



┌ Context Class ───────────────────────┐
│● Squad (128k)  Standard sessions     │
│  Maniple (272k)  Extended analysis   │
│  Clan (400k)  Large codebase         │
│  Legion (1M+)  Massive context       │
└──────────────────────────────────────┘
