core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_empty.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
│ Ω Dashboard
│── session ──────────────────
│0 turns · 0 tool calls
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
