core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_with_harness_status.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
│ Ω Dashboard
│── harness ──────────────────
│⚙ Systems Engineer (2)
│♪ Concise (full)
│MCP 1/1 (5 tools)
│🔓  keyring (3 secrets)
│
│── session ──────────────────
│0 turns · 0 tool calls
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
