core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_with_openspec_change.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
expression: render_to_string(&terminal)
---
│ Ω Dashboard
│── openspec ─────────────────
│⟳ tui-surface-pass 7/10
│
│── session ──────────────────
│0 turns · 0 tool calls
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
│
