core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_footer_default.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 145
expression: render_to_string(&terminal)
---
╭ context ───────────────────╮╭ model ─────────────────────╮╭ memory ────────────────────╮╭ system ────────────────────╮
│ ▐░░░░░░░░░░░░░░▌ 0%        ││ ☁  · Squad                 ││ ⌗ 0                        ││ ⌂                          │
│                            ││  · ○ api key               ││                            ││                            │
│                            ││                            ││                            ││                            │
╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯
