core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_footer_with_model_and_context.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 169
expression: render_to_string(&terminal)
---
╭ context ───────────────────╮╭ model ─────────────────────╮╭ memory ────────────────────╮╭ system ────────────────────╮
│ ▐██████░░░░░░░░▌ 45% / 200 ││ ☁ Anthropic · Maniple      ││ ⌗ 2400 · inj 120 · wm 8    ││ ⌂                          │
│                            ││ claude-sonnet-4-6 · ○ api  ││                            ││ ⚙ 47                       │
│                            ││                            ││                            ││                            │
╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯
