core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_tools_panel_with_runtime_and_error.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 347
expression: render_to_string(&terminal)
---
┌ tools ─────────────────────────────────┐
│▸ ⌕ cbase        350ms≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋│
│▸ ▫ recall       220ms≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋·│
│✗ ⊕  search      8.1s ≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋·│
│  ⌘ sh          41.0s ≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋··│
│                                        │
│                                        │
│                                        │
│  4/4 active                            │
└────────────────────────────────────────┘
